[gd_scene load_steps=3 format=2]

[ext_resource path="res://gameplay/Weapon.gd" type="Script" id=1]
[ext_resource path="res://sound/cc0_rubberduck/synth_laser_02.ogg" type="AudioStream" id=2]

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )

[node name="shot_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
